# Progetto

./: .clang-format  .gitignore  Boids.hpp  CMakeLists.txt  boids.cpp  boids.hpp  boids.test.cpp  calcoli.cpp  main.cpp  operators.cpp  randomgenerator.cpp  rulesofflight.cpp  rulesofswim.cpp
